# rust-dsa

./: README.md
array-search/binary-search/: Cargo.toml
array-search/binary-search/src/: main.rs
array-search/common/: Cargo.toml
array-search/common/src/: lib.rs
array-search/linear-search/: Cargo.toml
array-search/linear-search/src/: main.rs
