[package]
name = "binary-search"
version = "0.1.0"
authors = ["Navlok Mishra <navlok.mishra@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { git = "https://github.com/innovolt/rust-common.git" }
